--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "nprogress": "^0.2.0",
     "sql-formatter": "^2.3.3",
     "store": "^2.0.12",
+    "viser-vue": "^2.4.8",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.9",
