--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,9 @@
     "lint:nofix": "vue-cli-service lint --no-fix"
   },
   "dependencies": {
-    "@ant-design-vue/pro-layout": "^0.3.0",
+    "@ant-design-vue/pro-layout": "^1.0.12",
     "@antv/data-set": "^0.10.2",
-    "ant-design-vue": "1.6.5",
+    "ant-design-vue": "^1.7.8",
     "axios": "^0.19.0",
     "codemirror": "^5.55.0",
     "core-js": "^3.1.2",
@@ -24,6 +24,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
+    "mockjs2": "1.0.8",
     "moment": "^2.24.0",
     "mxgraph": "^4.2.0",
     "nprogress": "^0.2.0",
