新增上传图片接口

--- a/base-cloud/base-cloud-services/base-cloud-detect-service/src/main/resources/bootstrap.yml
+++ b/base-cloud/base-cloud-services/base-cloud-detect-service/src/main/resources/bootstrap.yml
@@ -10,6 +10,10 @@ spring:
         service-id: base-cloud-config-server
       profile: dev
       name: config
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/*Mapper.xml
