build: 接口请求配置调整

--- a/web/.env
+++ b/web/.env
@@ -1,5 +1,11 @@
 # 平台本地运行端口号
-VITE_PORT = 8848
+VITE_PORT = 8000
 
 # 是否隐藏首页 隐藏 true 不隐藏 false （勿删除，VITE_HIDE_HOME只需在.env文件配置）
 VITE_HIDE_HOME = false
+
+# API 请求的默认前缀
+VITE_API_BASE_URL = /api
+
+# API 请求的超时时间
+VITE_API_TIMEOUT = 60000
