--- a/web/.env.development
+++ b/web/.env.development
@@ -1,8 +1,14 @@
 # 平台本地运行端口号
-VITE_PORT = 8848
+VITE_PORT = 8000
 
 # 开发环境读取配置文件路径
 VITE_PUBLIC_PATH = /
 
 # 开发环境路由历史模式（Hash模式传"hash"、HTML5模式传"h5"、Hash模式带base参数传"hash,base参数"、HTML5模式带base参数传"h5,base参数"）
 VITE_ROUTER_HISTORY = "hash"
+
+# API 请求的默认前缀
+VITE_API_BASE_URL = /api
+
+# API 请求的超时时间
+VITE_API_TIMEOUT = 60000
