--- a/web/.env.production
+++ b/web/.env.production
@@ -11,3 +11,9 @@ VITE_CDN = false
 # 压缩时不删除原始文件的配置：gzip、brotli、both（同时开启 gzip 与 brotli 压缩）、none（不开启压缩，默认）
 # 压缩时删除原始文件的配置：gzip-clear、brotli-clear、both-clear（同时开启 gzip 与 brotli 压缩）、none（不开启压缩，默认）
 VITE_COMPRESSION = "none"
+
+# API 请求的默认前缀
+VITE_API_BASE_URL = /api
+
+# API 请求的超时时间
+VITE_API_TIMEOUT = 60000
