chore: 引入crypto-js并调整接口代理

--- a/web/package.json
+++ b/web/package.json
@@ -69,6 +69,7 @@
     "codemirror": "^5.65.19",
     "codemirror-editor-vue3": "^2.8.0",
     "cropperjs": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "deep-chat": "^2.2.1",
     "echarts": "^5.6.0",
@@ -125,6 +126,7 @@
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@tailwindcss/vite": "^4.1.8",
     "@types/codemirror": "^5.60.16",
+    "@types/crypto-js": "^4.2.0",
     "@types/dagre": "^0.7.52",
     "@types/intro.js": "^5.1.5",
     "@types/js-cookie": "^3.0.6",
